Project Card and Hero Updates

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,9 @@
   }
 
   main {
-    padding: 0 4rem;
+    padding-right: clamp(1.8rem, 8vw, 4rem);
+    padding-left: clamp(1.8rem, 8vw, 4rem);
+
   }
 
 :root {
@@ -77,12 +79,12 @@ h1, h2, h3, .h7 {
 }
 
 h1 {
-  font-size: 5.125rem;
+  font-size: clamp(3rem, 8vw, 5.125rem);
     background: linear-gradient(180deg, #5FBCFF 12.5%, #006AB6 120%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     overflow: visible;
-    line-height: 4.4rem; /* 73.171% */
+    line-height: clamp(2.8125rem, 8vw, 4.4rem);/* 73.171% */
   }
 
 .h1-gradient {
@@ -140,14 +142,14 @@ h6 {
 p {
   font-family: 'azo-light';
   color: var(--secondary-light-grey);
-  font-size: 1.125rem;
+  /* font-size: clamp(0.875rem, 5vw, 1.1rem); */
   line-height: 2.125rem; /* 188.889% */
   text-align: center;
 }
 
 
 .p2 {
-  font-size: 1.1rem;
+  font-size: clamp(.075rem, 8vw, 1.1rem);
   text-align: center;
   line-height: 2.1rem;
 
@@ -155,8 +157,8 @@ p {
 
 .p3, .nav-links a {
   font-family: 'azo';
-  font-size: 1.125rem;
-  line-height: normal;
+  font-size: clamp(0.875rem, 8vw, 1.125rem);
+  line-height: 1.2rem;
   letter-spacing: 0.1125rem;
   text-align: center;
 }
@@ -170,19 +172,20 @@ nav {
   padding: 3rem 4rem;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
+  background: var(--secondary-grey);
 
 }
 
 
 
 .nav-logo img {
-  height: 2.8rem ;
+  height: clamp(2rem, 5vw, 2.8rem);
 }
 
 a {
   text-decoration: none;
-  color: var(--primary-light-grey);
+  color: var(--secondary-light-grey);
+  transition: .5s ease;
 }
 
 .nav-links ul {
@@ -190,16 +193,163 @@ a {
   gap: 2rem;
 }
 
-.mobile-menu {
-  display: none;
+
+
+
+.nav-links a:hover {
+  color: var(--primary-light-grey);
 }
+
+
+
+.nav-links a, .mobile-nav-links a {
+  text-decoration: none;
+  color: var(--secondary-light-grey);
+  letter-spacing: 2px;
+  transition: 400ms ease;
+
+}
+
+.nav-socials img {
+  height: 23px;
+}
+
+
+.nav-socials {
+  display: flex;
+  gap: 15px;
+}
+
+
+.mobile-menu {
+  display: none; /* Start hidden */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 24rem;
+  position: fixed;
+  right: 0;
+  top: 0;
+  background-color: var(--primary-grey);
+  padding: 110px 0;
+  gap: 4rem;
+  transition: transform 0.3s ease;
+  transform: translateX(100%); /* Hidden by default */
+  
+}
+
+.mobile-menu.show {
+  display: flex; /* Ensure it's visible */
+  transform: translateX(0); /* Slide in */
+}
+
+
+.mobile-nav-links ul {
+  margin: 0;
+}
+
+.mobile-nav-links {
+  padding: 0;
+}
+
+.mobile-nav-links li {
+  font-size: 1.5rem;
+}
+
+.mobile-social-icons img {
+  height: 25px;
+}
+
+.mobile-social-icons {
+  display: flex;
+  gap: 15px;
+
+}
+
+.mobile-menu li {
+  list-style: none;
+}
+
+.mobile-menu ul {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.mobile-menu a {
+  text-decoration: none;
+}
+
+.show {
+  right: 0;
+}
+
+/* Hamburger Menu */
 
 .menu {
+  position: relative;
+  width: 35px;
+  height: 25px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   display: none;
 }
 
+/* Style for the three hamburger bars */
+.bar {
+  width: 100%;
+  height: 3px;
+  border-radius: 20px;
+  background-color: var(--primary-light-grey);
+  transition: all 0.5s ease;
+  position: absolute;
+}
+
+.bar1 {
+  top: 0;
+}
+
+.bar2 {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.bar3 {
+  bottom: 0;
+}
+
+/* When the menu is active, animate the bars */
+    /* .menu.active .bar1 {
+      transform: rotate(45deg);
+      top: 45%;
+    }
+
+    .menu.active .bar2 {
+      opacity: 0;
+    }
+
+    .menu.active .bar3 {
+      transform: rotate(-45deg);
+      bottom: 45%;
+    } */
+
+.nav-links a:hover, .mobile-nav-links a:hover {
+  color: var(--primary-light-grey);
+}
+
+.nav-links li:hover {
+  scale: 1.02;
+
+}
+
+/* End of Nav */
 
 
+
+/* Button Styling */
 
 
 button {
@@ -225,6 +375,11 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .hero {
+    width: 100%;
+    background: linear-gradient(to top, var(--primary-grey), var(--alt-grey));
   }
 
 
@@ -304,6 +459,7 @@ button {
     gap: 3.8rem;
     transition: .5s ease;
     position: relative;
+    cursor: pointer;
   }
 
   .project-card-1::before {
@@ -377,3 +533,14 @@ button {
   }
   
   
+
+
+  @media (max-width: 1300px) {
+    .nav-links, nav button {
+      display: none;
+    }
+    .menu {
+      display: flex;
+    }
+
+  }
