--- a/Scrap Code Files/styles2.css
+++ b/Scrap Code Files/styles2.css
@@ -36,3 +36,112 @@
     transform: scale(1.02);
 
   }
+
+
+  h1, h2, h3, h4 {
+    font-family: 'acumin';
+    color: var(--primary-light-grey);
+    text-transform: uppercase;
+        text-align: center;
+
+}
+
+h5, h6, .h7, .h8, .h10 {
+  font-family: 'azo-bold';
+  color: var(--primary-light-grey);
+}
+
+h1 {
+  font-size: clamp(48px, 8vw, 82px);
+    background: linear-gradient(180deg, #5FBCFF 12.5%, #006AB6 120%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    overflow: visible;
+    line-height: clamp(2.8125rem, 8vw, 4.4rem);/* 73.171% */
+  }
+
+.h1-gradient {
+  font-family: 'acumin-italic';
+  background: linear-gradient(to top, var(--secondary-light-grey), var(--primary-light-grey));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  overflow: hidden;
+  font-style: italic;
+  padding: .2rem;
+}
+
+
+
+h2 {
+    font-size: clamp(2rem, 5vw, 2.8rem);
+    color: var(--Primary-Light-Grey, #EEE);
+    text-align: center;
+}
+
+h3 {
+    line-height: clamp(1.5rem, 5vw, 2.4rem);
+    font-size: clamp(1.25rem, 5vw, 2rem);
+    text-align: left;
+}
+
+h4 {
+    line-height: 1.3rem;
+    font-size: clamp(20px, 5vw, 24px);
+}
+
+h5 {
+    line-height: clamp(23px, 5vw, 27px);
+    font-size: clamp(14px, 5vw, 20px);
+    letter-spacing: .2rem;
+    color: var(--primary-light-grey);
+}
+
+h6 {
+    line-height: 1.8rem;
+    font-size: 1.2rem;
+}
+
+h6 {
+    color: var(--secondary-light-grey);
+    font-family: 'azo';
+    letter-spacing: .2rem;
+
+}
+
+
+
+
+/* paragraph styles */
+p {
+  font-family: 'azo-light';
+  color: var(--secondary-light-grey);
+  /* font-size: clamp(0.875rem, 5vw, 1.1rem); */
+  line-height: 2.125rem; /* 188.889% */
+  text-align: center;
+}
+
+.hero-content .p2 {
+  font-size: clamp(16px, 2vw, 20px);
+  line-height: clamp(2rem, 5vw, 2.6rem);
+
+}
+
+
+.p2 {
+  font-size: clamp(14px, 2vw, 18px);
+  text-align: center;
+  line-height: clamp(1.8rem, 8vw, 2.1rem);
+}
+
+.p3, .nav-links a {
+  font-family: 'azo';
+  /* font-size: clamp(14px, 2vw, 18px); */
+  line-height: 1.2rem;
+  letter-spacing: 0.1125rem;
+  text-align: center;
+}
+
+.p3 {
+  font-size: clamp(14px, 2vw, 18px);
+
+}
