--- a/styles.css
+++ b/styles.css
@@ -406,6 +406,7 @@ button {
     font-size: clamp(14px, 5vw, 18px);
     font-family: 'azo-light';
     transition: .5s ease;
+    cursor: pointer;
   }
 
 
@@ -488,7 +489,7 @@ button {
 
 .hero-2 {
   background: linear-gradient(to top, var(--primary-grey), var(--alt-grey));
-  min-height: 100vh;
+  /* min-height: 80vh; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -499,19 +500,24 @@ button {
 
 .hero-2-container {
   max-width: 1100px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  height: 100%;
+  display: flex;
   margin: 0 auto;
-  overflow: hidden;
+  margin: 100px 0;
   gap: clamp(4rem, 5vw, 6rem);
+  padding-top: clamp(2rem, 5vw, 8rem);
+}
+
+.half {
+  flex: 1;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero-2-img img {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  position: absolute;
-  display: block;
   transition: .8s ease;
 
 
@@ -519,22 +525,16 @@ button {
 
 .hero-2-img {
   overflow: hidden;
-  height: 100%;
+  width: 100%;
   position: relative;
-  display: inline-block;
 }
 
-.resume-img {
-  position: relative;
-  display: inline-block;
-}
 
 .resume-img img {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  display: block;
-  transition: .8s ease;
+  transition: .8s ease; 
 }
 
 .resume-content {
@@ -1091,16 +1091,16 @@ footer a {
       display: none;
     }
 
-    .hero-2-container {
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 1fr;
-      padding-top: 9rem;
-      padding-bottom: clamp(5rem, 5vw, 6rem);
+    .half {
+      flex: 0 0 100%;
     }
 
-    .resume-container {
-     grid-template-rows: .5fr 1fr;
-   }
+    .hero-2-container {
+      flex-wrap: wrap;
+      /* padding-top: clamp(2rem, 5vw, 8rem); */
+    }
+
+
 
 
 
@@ -1119,13 +1119,7 @@ footer a {
     .hero-content h1 {
       max-width: 300px;
     }
-    .hero-2-container {
-      margin-top: 101px;
-      padding-top: 3rem;
-      grid-template-rows: 1fr .5fr;
-      padding-top: 2rem;
 
-    }
 
 
     .hero .p2 {
